@@ -8,3 +8,5 @@ Lucas De Oliveira
 Matheo Lobjois
 Alexis TRY
 
+compiler : javac --module-path /usr/share/openjfx/lib/ --add-modules javafx.controls -d bin/ src/bd/*.java src/participant/*.java src/sport/*.java src/autre/*.java src/comparateur/*.java src/vue/*.java
+executer : java -cp ./bin:/usr/share/java/mariadb-java-client.jar --module-path /usr/share/openjfx/lib/ --add-modules javafx.controls vue.FenetreAccueil
